--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,14 +1,17 @@
 body {
     font-family:Helvetica, Arial, sans-serif;
     color: #333;
-    font-size: .8em;
+    font-size: 1em;
 }
 .question-container{
 
 }
 .question{
     padding: 5px;
-
+    margin:1em 0;
+}
+.question:last-child{
+    margin-bottom: 2em;
 }
 input{
     border-radius: 6px;
@@ -37,4 +40,32 @@ input{
     background: #E74C3C;
     box-shadow: none;
     color: white;
+}
+.fillgaps{
+    padding: 1em;
+    border: solid 1px #eee;
+    border-radius: 5px;
+    width: 30em;
+    margin: 0 auto;
+    margin-top: 2em;
+}
+button{
+    padding: .5em;
+    margin: 0 auto;
+    border: none;
+    border-radius: 5px;
+    color:#fff;
+    font-size: 1.2em;
+    box-shadow: 0px 0px 1px #666;
+    text-decoration: none;
+}
+button:active{
+    box-shadow: inset 0px 0px 6px #333;
+}
+button:focus{
+    outline: none;
+}
+button.confirm{
+    background: #48C9B0;
+    float: right;
 }
