--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -49,7 +49,7 @@ input{
     margin: 0 auto;
     margin-top: 2em;
 }
-button{
+.btn{
     padding: .5em;
     margin: 0 auto;
     border: none;
@@ -59,13 +59,52 @@ button{
     box-shadow: 0px 0px 1px #666;
     text-decoration: none;
 }
-button:active{
+.btn:active{
     box-shadow: inset 0px 0px 6px #333;
 }
-button:focus{
+.btn:focus{
     outline: none;
 }
-button.confirm{
+.btn.btn-confirm{
     background: #48C9B0;
     float: right;
 }
+.message-box{
+    opacity: 0;
+    display: none;
+    padding: 1em;
+    border: solid 1px #eee;
+    border-radius: 5px;
+    margin: 0 auto;
+    float: left;
+    min-width: 12em;
+    max-width: 30em;
+    top: 3em;
+    margin-left: 30%;
+    position:absolute;
+    z-index: 99;
+    background-color: #fff;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    -webkit-transition: opacity 0.25s ;
+       -moz-transition: opacity 0.25s ;
+        -ms-transition: opacity 0.25s ;
+         -o-transition: opacity 0.25s ;
+            transition: opacity 0.25s ;
+}
+.content{
+    width: auto;
+    padding: 1em;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 1em;
+}
+.active{
+    display: inline;
+    
+        -webkit-transition: opacity 0.25s ;
+       -moz-transition: opacity 0.25s ;
+        -ms-transition: opacity 0.25s ;
+         -o-transition: opacity 0.25s ;
+            transition: opacity 0.25s ;
+            opacity: 1;
+}
+
